src/styles/partials/cart.styl
/**
 * Cart
 */
 
/**
 * Cart Items
 */
.cart-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  
  &::before,
  &::after {
    content: "";
    width: 200px;
    margin: 0 1rem;
  }
  
  &::before {
    order: 1;
  }
}

.cart-item {
  display: flex;
  flex-direction: column;
  
  padding: 1rem;
  margin: 1rem;
  
  width: 200px;
  
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 3px;
}

.cart-item__title,
.cart-item__available,
.cart-item__price {
  margin-bottom: .5rem;
}

.cart-item__photo {
  $size = calc(200px - 2rem - 2px);
  
  width: $size;
  height: @width;
  
  margin-bottom: .5rem;
}

.cart-item__add {
  align-self: flex-end;
  
  padding: .5rem;
  margin: auto 0 0 0;
  
  // Move to .btn
  appearance: none;
  outline: none;
  border: none;
  background: none;
  cursor: pointer;
  
  border: 1px solid;
  border-color: $clrBlue;
  border-radius: 3px;
  
  color: $clrBlue;
  
  transition: color .3s ease, border-color .3s ease, background-color .3s ease;
  
  &:hover {
    color: $clrWhite;
    background-color: $clrViolet;
    border-color: $clrWhite;
  }
}
 
/**
 * Cart Widjet
 */
.cart-widjet__wrapper {
  position: absolute;
  
  top: 0;
  right: 0;
}

.cart-widjet__body {
  $size = 50px;
  position: relative;
  
  width: $size;
  height: $size;

  cursor: pointer;
  border-radius: 100%;
  box-shadow: 0 2px 5px $clrTransparent80;
  
  color: $clrBlue;
  fill: currentColor;
  
  transition: color .25s ease, box-shadow .25s ease;
    
  &:hover {
    color: $clrViolet;
    box-shadow: 0 3px 7px $clrTransparent70;
  }
}

.cart-widjet__data {
  $size = 15px;
  
  position: absolute;
  top: 10px;
  right: 10px;
  
  width: $size;
  height: $size;

  font-family: sans-serif;
  font-size: .75rem;
  text-align: center;

  background-color: $clrWhite;

  border-radius: 100%;
} 
 
/**
 * Cart table
 */
.cart-table {
  width: 100%;
  border-collapse: collapse;
  
  font-size: 1rem;
  
  line-height: normal;
  text-align: left;
  
  cursor: default;
}

.cart-table__caption {
  & > th {
    padding: .25rem .5rem 1.5rem .5rem;

    font-weight: bold;
  }
}

.cart-table__row {
  &:nth-child(odd) {
    background-color: rgba(0, 0, 0, .02);
  }

  & > td {
    padding: 1rem .5rem;
    
    vertical-align: middle;
  }
}

.cart-table__col-counter {
  min-width: 7rem;
}

.cart-table__btn {
  margin: .25rem;
    
  line-height: 1;
  
  border: 1px solid;
  border-color: $clrBlue;
  border-radius: 3px;
  
  color: $clrBlue;
  
  transition: color .3s ease, border-color .3s ease, background-color .3s ease;
  
  &:hover {
    color: $clrWhite;
    background-color: $clrViolet;
    border-color: $clrViolet;
  }
  
  @media ({$bpMaxDevW320}) {
    padding: .25rem;
  }
}

